[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scene/Levels/Level_1.gd" type="Script" id=1]
[ext_resource path="res://Scene/NPC/Hostage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprite/Tilemap/Tiles (1).png" type="Texture" id=4]
[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Object/TableHorizontal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scene/Object/TableVertical.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=15]
14/name = "Tiles (1).png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 1 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "Tiles (1).png 15"
15/texture = ExtResource( 4 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 32, 0, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 2 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
16/name = "Tiles (1).png 16"
16/texture = ExtResource( 4 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 64, 0, 32, 32 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape = SubResource( 3 )
16/shape_one_way = false
16/shape_one_way_margin = 1.0
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "Tiles (1).png 17"
17/texture = ExtResource( 4 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 32, 32, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 4 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "Tiles (1).png 18"
18/texture = ExtResource( 4 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 32, 32, 32, 32 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 21 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0
19/name = "Tiles (1).png 19"
19/texture = ExtResource( 4 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 64, 32, 32, 32 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape = SubResource( 5 )
19/shape_one_way = false
19/shape_one_way_margin = 1.0
19/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
19/z_index = 0
20/name = "Tiles (1).png 20"
20/texture = ExtResource( 4 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 0, 64, 32, 32 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape = SubResource( 6 )
20/shape_one_way = false
20/shape_one_way_margin = 1.0
20/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
20/z_index = 0
21/name = "Tiles (1).png 21"
21/texture = ExtResource( 4 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 32, 64, 32, 32 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape = SubResource( 7 )
21/shape_one_way = false
21/shape_one_way_margin = 1.0
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0
22/name = "Tiles (1).png 22"
22/texture = ExtResource( 4 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 64, 64, 32, 32 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape = SubResource( 8 )
22/shape_one_way = false
22/shape_one_way_margin = 1.0
22/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
22/z_index = 0
23/name = "Tiles (1).png 23"
23/texture = ExtResource( 4 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 96, 64, 32, 32 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "Tiles (1).png 24"
24/texture = ExtResource( 4 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 96, 32, 32, 32 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape = SubResource( 9 )
24/shape_one_way = false
24/shape_one_way_margin = 1.0
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0
25/name = "Tiles (1).png 25"
25/texture = ExtResource( 4 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 128, 32, 32, 32 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape = SubResource( 10 )
25/shape_one_way = false
25/shape_one_way_margin = 1.0
25/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
25/z_index = 0
26/name = "Tiles (1).png 26"
26/texture = ExtResource( 4 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 128, 64, 32, 32 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shape_offset = Vector2( 0, 0 )
26/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
26/shape = SubResource( 11 )
26/shape_one_way = false
26/shape_one_way_margin = 1.0
26/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
26/z_index = 0
27/name = "Tiles (1).png 27"
27/texture = ExtResource( 4 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 128, 0, 32, 32 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shape_offset = Vector2( 0, 0 )
27/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
27/shape = SubResource( 12 )
27/shape_one_way = false
27/shape_one_way_margin = 1.0
27/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
27/z_index = 0
28/name = "Tiles (1).png 28"
28/texture = ExtResource( 4 )
28/tex_offset = Vector2( 0, 0 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 96, 0, 32, 32 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shape_offset = Vector2( 0, 0 )
28/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
28/shape = SubResource( 13 )
28/shape_one_way = false
28/shape_one_way_margin = 1.0
28/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
28/z_index = 0
29/name = "Tiles (1).png 29"
29/texture = ExtResource( 4 )
29/tex_offset = Vector2( 0, 0 )
29/modulate = Color( 1, 1, 1, 1 )
29/region = Rect2( 32, 32, 32, 32 )
29/tile_mode = 0
29/occluder_offset = Vector2( 0, 0 )
29/navigation_offset = Vector2( 0, 0 )
29/shape_offset = Vector2( 0, 0 )
29/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
29/shape = SubResource( 14 )
29/shape_one_way = false
29/shape_one_way_margin = 1.0
29/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
29/z_index = 0

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=16]

[sub_resource type="Theme" id=17]

[sub_resource type="DynamicFont" id=18]
size = 39
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Floor" type="TileMap" parent="." groups=[
"wall1",
]]
position = Vector2( 151.959, 88.0251 )
rotation = 8.12934e-06
tile_set = SubResource( 15 )
cell_size = Vector2( 32, 32 )
collision_layer = 4
collision_mask = 5
format = 1
tile_data = PoolIntArray( -131078, 26, 0, -131077, 28, 0, -131076, 21, 0, -131075, 21, 0, -131074, 21, 0, -131073, 21, 0, -196608, 21, 0, -196607, 21, 0, -196606, 21, 0, -196605, 21, 0, -196604, 27, 0, -196603, 26, 0, -196602, 26, 0, -196601, 26, 0, -196600, 26, 0, -196599, 26, 0, -196598, 26, 0, -196597, 26, 0, -196596, 26, 0, -196595, 26, 0, -196594, 26, 0, -196593, 26, 0, -65542, 26, 0, -65541, 19, 0, -65540, 18, 0, -65539, 18, 0, -65538, 18, 0, -65537, 18, 0, -131072, 18, 0, -131071, 18, 0, -131070, 18, 0, -131069, 18, 0, -131068, 17, 0, -131067, 26, 0, -131066, 26, 0, -131065, 26, 0, -131064, 26, 0, -131063, 26, 0, -131062, 26, 0, -131061, 26, 0, -131060, 26, 0, -131059, 26, 0, -131058, 26, 0, -131057, 26, 0, -6, 26, 0, -5, 19, 0, -4, 23, 0, -3, 23, 0, -2, 23, 0, -1, 23, 0, -65536, 23, 0, -65535, 23, 0, -65534, 23, 0, -65533, 23, 0, -65532, 17, 0, -65531, 26, 0, -65530, 26, 0, -65529, 26, 0, -65528, 26, 0, -65527, 26, 0, -65526, 26, 0, -65525, 26, 0, -65524, 26, 0, -65523, 26, 0, -65522, 26, 0, -65521, 26, 0, 65530, 26, 0, 65531, 19, 0, 65532, 23, 0, 65533, 23, 0, 65534, 23, 0, 65535, 23, 0, 0, 23, 0, 1, 23, 0, 2, 23, 0, 3, 23, 0, 4, 17, 0, 5, 26, 0, 6, 26, 0, 7, 26, 0, 8, 26, 0, 9, 26, 0, 10, 26, 0, 11, 26, 0, 12, 26, 0, 13, 26, 0, 14, 26, 0, 15, 26, 0, 131066, 26, 0, 131067, 24, 0, 131068, 15, 0, 131069, 15, 0, 131070, 15, 0, 131071, 15, 0, 65536, 16, 0, 65537, 23, 0, 65538, 23, 0, 65539, 23, 0, 65540, 20, 0, 65541, 21, 0, 65542, 21, 0, 65543, 21, 0, 65544, 21, 0, 65545, 21, 0, 65546, 21, 0, 65547, 21, 0, 65548, 27, 0, 65549, 26, 0, 65550, 26, 0, 65551, 26, 0, 196602, 26, 0, 196603, 26, 0, 196604, 26, 0, 196605, 26, 0, 196606, 26, 0, 196607, 26, 0, 131072, 19, 0, 131073, 23, 0, 131074, 23, 0, 131075, 23, 0, 131076, 29, 0, 131077, 29, 0, 131078, 29, 0, 131079, 29, 0, 131080, 29, 0, 131081, 29, 0, 131082, 29, 0, 131083, 29, 0, 131084, 17, 0, 131085, 26, 0, 131086, 26, 0, 131087, 26, 0, 262138, 26, 0, 262139, 26, 0, 262140, 26, 0, 262141, 26, 0, 262142, 26, 0, 262143, 26, 0, 196608, 19, 0, 196609, 23, 0, 196610, 23, 0, 196611, 23, 0, 196612, 23, 0, 196613, 23, 0, 196614, 23, 0, 196615, 23, 0, 196616, 23, 0, 196617, 23, 0, 196618, 23, 0, 196619, 23, 0, 196620, 17, 0, 196621, 26, 0, 196622, 26, 0, 196623, 26, 0, 327674, 26, 0, 327675, 26, 0, 327676, 26, 0, 327677, 26, 0, 327678, 26, 0, 327679, 26, 0, 262144, 19, 0, 262145, 23, 0, 262146, 23, 0, 262147, 23, 0, 262148, 14, 0, 262149, 15, 0, 262150, 16, 0, 262151, 23, 0, 262152, 23, 0, 262153, 23, 0, 262154, 23, 0, 262155, 23, 0, 262156, 17, 0, 262157, 26, 0, 262158, 26, 0, 262159, 26, 0, 393210, 26, 0, 393211, 26, 0, 393212, 26, 0, 393213, 26, 0, 393214, 26, 0, 393215, 26, 0, 327680, 19, 0, 327681, 23, 0, 327682, 23, 0, 327683, 23, 0, 327684, 20, 0, 327685, 21, 0, 327686, 22, 0, 327687, 23, 0, 327688, 23, 0, 327689, 23, 0, 327690, 14, 0, 327691, 15, 0, 327692, 25, 0, 327693, 26, 0, 327694, 26, 0, 327695, 26, 0, 458746, 26, 0, 458747, 26, 0, 458748, 26, 0, 458749, 26, 0, 458750, 26, 0, 458751, 26, 0, 393216, 19, 0, 393217, 23, 0, 393218, 23, 0, 393219, 23, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 23, 0, 393224, 23, 0, 393225, 23, 0, 393226, 17, 0, 393227, 26, 0, 393228, 26, 0, 393229, 26, 0, 393230, 26, 0, 393231, 26, 0, 524282, 26, 0, 524283, 26, 0, 524284, 26, 0, 524285, 26, 0, 524286, 26, 0, 524287, 26, 0, 458752, 19, 0, 458753, 23, 0, 458754, 23, 0, 458755, 23, 0, 458756, 23, 0, 458757, 23, 0, 458758, 23, 0, 458759, 23, 0, 458760, 23, 0, 458761, 23, 0, 458762, 17, 0, 458763, 26, 0, 458764, 26, 0, 458765, 26, 0, 458766, 26, 0, 458767, 26, 0, 589818, 26, 0, 589819, 26, 0, 589820, 26, 0, 589821, 26, 0, 589822, 26, 0, 589823, 26, 0, 524288, 24, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 25, 0, 524299, 26, 0, 524300, 26, 0, 524301, 26, 0, 524302, 26, 0, 524303, 26, 0, 655354, 26, 0, 655355, 26, 0, 655356, 26, 0, 655357, 26, 0, 655358, 26, 0, 655359, 26, 0, 589824, 26, 0, 589825, 26, 0, 589826, 26, 0, 589827, 26, 0, 589828, 26, 0, 589829, 26, 0, 589830, 26, 0, 589831, 26, 0, 589832, 26, 0, 589833, 26, 0, 589834, 26, 0, 589835, 26, 0, 589836, 26, 0, 589837, 26, 0, 589838, 26, 0, 589839, 26, 0 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Detector6" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 519.74, 201.06 )
scale = Vector2( 2, 2 )

[node name="Detector8" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 487.805, 201.087 )
scale = Vector2( 2, 2 )

[node name="Detector7" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 519.74, 232.917 )
scale = Vector2( 2, 2 )

[node name="Detector9" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 487.805, 232.944 )
scale = Vector2( 2, 2 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 57.1785, 86.6324 )

[node name="Hostage" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 294.778, 194.111 )

[node name="Hostage2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 328.031, 194.546 )

[node name="Hostage3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 359.737, 193.68 )

[node name="TableVertical" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 393.118, 223.835 )
scale = Vector2( 4, 4 )

[node name="TableHorizontal" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 232.434, 167.88 )
scale = Vector2( 4.834, 4 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 206.706
margin_top = 172.487
margin_right = 405.706
margin_bottom = 212.487
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/VBoxContainer"]
margin_right = 102.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 19 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
margin_left = 106.0
margin_right = 199.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 20 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Control"]
material = SubResource( 16 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.58
margin_left = -211.318
margin_top = -52.6028
margin_right = 225.682
margin_bottom = -37.6028
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
text = "You kill a hostage!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Node2D/Detector6" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="Node2D/Detector8" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="Node2D/Detector7" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="Node2D/Detector9" to="." method="_on_Detector_body_entered"]
[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
